[project]
name = "yolo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "psycopg>=3.2.13",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.44",
]
